map white space issue, more responsive font sizes

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,14 @@ svg text {
 
 @media only screen and (max-width: 1140px) {
 
+	#framework-chart svg {
+	    font-size: 14px !important;
+	}
+
+	.frameworkColHeader text {
+	    font-size: 12px !important;
+	}
+
 	.subtitle,
 	#dateRange {
 		font-size: 14px !important;
@@ -231,6 +239,19 @@ svg text {
 
 
 @media only screen and (max-width: 840px) {
+
+	#framework-chart svg {
+	    font-size: 16px !important;
+	}
+
+	svg {
+		font-size: 20px !important;
+	}
+
+	.frameworkColHeader text {
+	    font-size: 14px !important;
+	}
+
 	.subtitle,
 	#dateRange {
 		font-size: 10px !important;
@@ -831,10 +852,6 @@ font-size: 15px;
 	top: 18px;
 }
 
-#framework-chart svg {
-	font-size: 15px;
-}
-
 #framework-toggle-switch {
 	cursor: pointer;
 }
@@ -843,10 +860,17 @@ font-size: 15px;
 
 }
 
-#framework-chart svg .frameworkColHeader text {
-	font-weight: normal;
-	text-transform: uppercase;
+#framework-chart svg, .frameworkColHeader text {
+    font-size: 14px;
+}
+
+.frameworkColHeader text {
+    text-transform: uppercase;
     font-size: 13px;
+}
+
+#framework-toggle-switch text {
+	font-size: 23px;
 }
 
 .cell {
